Landing spots for some data created in HTML. WIP

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     
+    <div id="title">Expense Tracker</div>
+
+    <div id="expense-date"></div>
+    <div id="expense-description"></div>
+    <div id="expense-location"></div>
+    <div id="expense-amount"></div>
+    <button id="add-expense"></button>
+
+    <table id="all-expenses"></table>
+
 
     <script src="app.js"></script>
 </body>
