Added id's to inputs and moved value capture inside of listener

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
         <h1 id="title">Expense Trekker</h1>
 
         <div id="form-box">
-            <form>
-                <div id="expense-date">
-                    Date:<input type="date" name="expense-date">
+            <form id="form">
+                <div>
+                    Date:<input id="expense-date" type="date" name="expense-date">
                 </div>
-                <div id="expense-description">
-                    Expense Description:<input type="text" name="expense-name" placeholder="What did you buy?">
+                <div>
+                    Expense Description:<input id="expense-description" type="text" name="expense-name" placeholder="What did you buy?">
                 </div>
-                <div id="expense-location">
-                    Bought From:<input type="text" name="location" placeholder="Name of Store">
+                <div>
+                    Bought From:<input id="expense-location" type="text" name="location" placeholder="Name of Store">
                 </div>
-                <div id="expense-amount">
-                    Amount:<input type="number" name="expense-amount" placeholder="$ Total Spent">
+                <div>
+                    Amount:<input id="expense-amount" type="number" name="expense-amount" placeholder="$ Total Spent">
                 </div>
             </form>
+            <button type="submit" id="submit-expense">Add Expense</button>
         </div>
-        <button type="submit" id="submit-expense">Add Expense</button>
 
         <table id="all-expenses">
             <tr>
@@ -33,8 +33,7 @@
                 <th id="expense">Expense</th>
                 <th id="location">Location</th>
                 <th style="text-align: right" id="amount">Amount</th>
-                <tr id=if-empty>
-                    <td colspan="4">New expenses will be listed here!</td>
+                <tr id="tr">
                 </tr>
             </tr>
         </table>
